# stimulus-py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  experiment_config_template.yaml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  docs.yml
config/: mypy.ini  ruff.toml
dockerfiles/stimulus-py-0.2.2/: Dockerfile
dockerfiles/stimulus-py-0.2.4/: Dockerfile
dockerfiles/stimulus-py-0.2.4.dev/: Dockerfile
docs/.overrides/partials/: comments.html
scripts/: gen_credits.py  make
src/stimulus/: __init__.py  debug.py
src/stimulus/analysis/: __init__.py  analysis_default.py
src/stimulus/cli/: __init__.py  analysis_default.py  check_model.py  interpret_json.py  predict.py  shuffle_csv.py  split_csv.py  split_yaml.py  transform_csv.py  tuning.py
src/stimulus/core/: __init__.py  registry.py
src/stimulus/data/: __init__.py  csv.py  data_handlers.py  experiments.py  handlertensorflow.py  handlertorch.py
src/stimulus/data/encoding/: __init__.py  encoders.py
src/stimulus/data/splitters/: __init__.py  splitters.py
src/stimulus/data/transform/: __init__.py  data_transformation_generators.py
src/stimulus/learner/: __init__.py  predict.py  raytune_learner.py  raytune_parser.py
src/stimulus/typing/: __init__.py
src/stimulus/utils/: generic_utils.py  json_schema.py  launch_utils.py  performance.py  yaml_data.py  yaml_experiment_utils.py  yaml_model_schema.py
templates/: experiment_config_template.yaml
tests/: __init__.py  conftest.py  test_csv.py  test_csv_loader.py  test_csv_processing.py  test_data_transformers.py  test_encoders.py  test_handlertorch.py  test_splitters.py  unittest_csv.py  unittest_data_transformers.py  unittest_handlertorch.py  unittest_performance.py  unittest_raytune_learner.py
tests/cli/: test_check_model.py  test_shuffle_csv.py  test_split_csv.py  test_split_yaml.py  test_transform_csv.py  test_tuning.py
tests/cli/__snapshots__/: test_shuffle_csv.ambr  test_split_csv.ambr  test_split_yaml.ambr  test_transform_csv.ambr
tests/data/: test_csv.py  test_data_handlers.py  test_experiment.py  test_handlertorch.py  unittest_experiments.py
tests/data/encoding/: __init__.py  test_encoders.py
tests/data/transform/: __init__.py  test_data_transformers.py
tests/learner/: __init__.py  test_raytune_learner.py
tests/stimulus/core/: test_registry.py
tests/test_data/dna_experiment/: dna_experiment_config_template.yaml  dna_experiment_config_template_0.yaml  test.csv  test_with_split.csv
tests/test_data/titanic/: process_titanic_to_stimulus.py  titanic.yaml  titanic_sub_config_0.yaml
tests/test_data/yaml_files/: wrong_field_type.yaml
tests/test_model/: __init__.py  dnatofloat_model.py  titanic_model.py  titanic_model_cpu.yaml  titanic_model_gpu.yaml
tests/typing/: __init__.py  test_typing.py
tests/utils/: test_data_yaml.py  test_model_yaml.py
unittest/: test_csv.py
