[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stimulus"
dynamic = ["version"]
description = "A package for testing deep learning models"
authors = [
  { name="Mathys Grapotte", email="mathysgrapotte@gmail.com" },
  { name="Alessio Vignoli"},
  { name="Suzanne Jin"},
  { name="Luisa Santus"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "matplotlib>=3.9.0",
    "multiprocess==0.70.17",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "polars-lts-cpu>=0.20.30,<1.12.0",
    "pydantic>=2.0.0",
    "ray[default,train,tune]>=2.23.0; python_version < '3.12'",
    "ray[default,train,tune]>=2.38.0; python_version >= '3.12'",
    "safetensors>=0.4.5",
    "scikit-learn>=1.5.0",
    "scipy==1.14.1",
    "syrupy>=4.8.0",
    "torch>=2.2.2",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[project.scripts]
stimulus-shuffle-csv = "stimulus.cli.shuffle_csv:run"
stimulus-transform-csv = "stimulus.cli.transform_csv:run"
stimulus-split-csv = "stimulus.cli.split_csv:run"
stimulus-predict = "stimulus.cli.predict:run"
stimulus-check-model = "stimulus.cli.check_model:run"
stimulus-tuning = "stimulus.cli.tuning:run"
stimulus-split-yaml = "stimulus.cli.split_yaml:run"

[project.urls]
Homepage = "https://mathysgrapotte.github.io/stimulus-py"
Documentation = "https://mathysgrapotte.github.io/stimulus-py"
Changelog = "https://mathysgrapotte.github.io/stimulus-py/changelog"
Repository = "https://github.com/mathysgrapotte/stimulus-py"
Issues = "https://github.com/mathysgrapotte/stimulus-py/issues"
Discussions = "https://github.com/mathysgrapotte/stimulus-py/discussions"
Gitter = "https://gitter.im/stimulus-py/community"
Funding = "https://github.com/sponsors/mathysgrapotte"

[tool.pdm]
version = {source = "scm"}
